--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,6 +1,14 @@
 input {
     margin-top: 30px;
     padding: 10px 15px;
-    width: 250px;
     font-size: 20px;
+}
+
+input[type="text"] {
+    width: 250px;
+}
+
+input[type="number"] {
+    width: 100px;
+    margin-left: 10px;
 }
