--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -1,6 +1,17 @@
 .results {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.results a {
+    text-decoration: none;
+    color: #333;
+}
+
+.results a:visited,
+.results a:active,
+.results a:hover {
+    color: #333;
 }
