--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 body {
   margin: 0;
   padding: 0;
   background-color: #999;
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
 }
