--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -5,10 +5,25 @@ input {
 }
 
 input[type="text"] {
-    width: 250px;
+    width: 400px;
 }
 
 input[type="number"] {
-    width: 100px;
+    width: 150px;
     margin-left: 10px;
+}
+
+.input-year {
+    display: inline-block;
+    position: relative;
+}
+
+.input-yer__info {
+    position: absolute;
+    font-size: 12px;
+    color: #777;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    margin-top: 5px; 
 }
