--- a/src/components/SearchResults/MovieCard.css
+++ b/src/components/SearchResults/MovieCard.css
@@ -1,49 +1,20 @@
 .card {
+    box-sizing: border-box;
     margin: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 300px;
     background-color: #fff;
+    transition: transform .3 ease;
 }
 
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    transform: scale(1.01);
 }
 
 .container {
     padding: 2px 16px;
 }
 
-
-/* .card {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    width: 400px;
-    padding: 10px;
-    margin-top: 15px;
-    background-color: #ccc;
-    border: 1px solid #000;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.card:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(20, 20, 20, .5);
-}
-
-.poster img {
-    height: 100%;
-}
-
-.info {
-    color: #fff;
-    z-index: 10;
-} */
 
